# whereabout

./: .gitignore  README.md  pyproject.toml
claude-skill/: skill.md
claude-skill/prompts/: enrich_artist.md  parse_query.md
scripts/: ra_investigate.py
tests/: conftest.py  test_cli.py  test_config.py  test_dice_source.py  test_doctor.py  test_enrich.py  test_kb_ingest.py  test_neighbourhoods.py  test_query_parser.py  test_ra_source.py  test_ranker.py
tests/fixtures/: dice_brixton_synthetic.json  dice_camden_live_snapshot.json  ra_london_synthetic.json
whereabout/: claude_cli.py  cli.py  config.py  db.py  doctor.py  logging.py  models.py  neighbourhoods.py  session.py  token_ledger.py
whereabout/data/: genre_aliases.json  genre_order.json  neighbourhoods.json  songkick_venues.json  venues.json
whereabout/kb/: artist_lookup.py  geocoder.py  ingest.py  read.py
whereabout/migrations/: 001_init.sql  002_source_fetches.sql
whereabout/output/: card_view.py  detail_view.py  list_view.py
whereabout/query/: enrich.py  parser.py  ranker.py
whereabout/sources/: base.py  dice_fm.py  resident_advisor.py  songkick.py  spotify_preview.py
whereabout/sources/venues/: __init__.py  _utils.py  africa_centre.py  alexandra_palace.py  amersham_arms.py  barbican.py  blues_kitchen.py  boisdale.py  brilliant_corners.py  brixton_jamm.py  cadogan_hall.py  cafe_oto.py  cecil_sharp_house.py  clapham_grand.py  conway_hall.py  corsica_studios.py  dalston_superstore.py  dingwalls.py  earth_hackney.py  effra_social.py  electric_ballroom.py  green_note.py  (+34 more)
whereabout/tui/: app.py
