[project]
name = "whereabout"
version = "0.1.0"
description = "Hyper-local live music discovery CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "httpx>=0.27",
    "anthropic>=0.34",
    "structlog>=24",
    "tomli-w>=1",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
whereabout = "whereabout.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
